--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -178,7 +178,7 @@
       }
     }
     
-    // Start initialization
+    // Start initialization immediately
     initializeHomeViewCounter();
-  });
+  })();
 </script>
